# geoguessrenv

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLIcommands.md  README.md  REPORT.md  TaskDescription.md  cart_pole_env_demo.py  clauderefactoring.md  example_replay_demo.py  geoguessr_env_demo.py  pyproject.toml  results_offline.csv  results_online.csv  run_baseline.py  test_results.csv
.cursor/rules/: python.mdc
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
.junie/: guidelines.md
agents/: __init__.py  base.py  openai_agent.py  openai_models.py  utils.py
cache/metadata/: BTfm0daq1ELQy6AoxY9OUQ_mini.jsonl  Bpi950zt6qj3nLEDb6vlbA_mini.jsonl  CAVImstg_ilB6ih-iHhcLA_mini.jsonl  PXbCkE2QR9KMO5A-_dY_Hg_mini.jsonl  RDYgxILYmO21OLP-7onFCA.jsonl  RDYgxILYmO21OLP-7onFCA_mini.jsonl  nearest_pano_cache.json  viuaypP6x_-j9xnLzBuOSg_mini.jsonl
geofences/: seattle_10km.json  seattle_15km.json  seattle_5km.json
geoguess_env/: README.md  __init__.py  action_parser.py  asset_manager.py  baseline_agent.py  cache_manager.py  config.py  geoguessr_env.py  geometry_utils.py  helpers.py  load_panorama_helper.py  pydantic_models.py  run_baseline.py  types.py  vlm_broker.py
geoguess_env/providers/: __init__.py  base.py  google_streetview.py
gymnasium_env/envs/: __init__.py  geoguessr_world.py  grid_world.py  helpers.py  load_panorama_helper.py  mode_handlers.py
gymnasium_env/load/: 58Mk7sxYcYnsn42uVm4I2g_minimetadata_map_with_connections.html  DyDhU3ixcGl-9BT_SNzHTQ_minimetadata_map_with_connections.html  Pb0CAX0KNsSjhP09-nMSwA_minimetadata_map_with_connections.html  load_metadata.py  load_panoramas.py  (+8 more)
scripts/: cache_test_data.py  run_openai_agent.py
tests/: conftest.py  test_action_parser.py  test_asset_manager.py  test_blocklist_functionality.py  test_config.py  test_env_retry_logic.py  test_fixtures.py  test_geoguessr_env.py  test_geometry_utils.py  test_geometry_utils_coerce.py  test_google_streetview_provider.py  test_integration.py  test_mode_handlers.py  test_openai_agent_tools.py  test_replay_functionality.py  test_termination.py
(+20 files in other folders)
