[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gymnasium_env"]

[project]
name = "gymnasium_env"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "pre-commit",
  "requests>=2.32.5",
  "streetview>=0.0.16",
  "streetlevel>=0.12.4",
  "pydantic>=2.11.7",
  "folium",
  "pillow>=11.3.0",
]
