[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geoguess_env"]

[project]
name = "geoguess_env"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=1.2.1",
  "numpy>=1.26.4,<2.0",
  "pygame>=2.6.1",
  "pre-commit>=4.3.0",
  "requests>=2.32.5",
  "streetview>=0.0.16",
  "streetlevel>=0.12.4",
  "pydantic>=2.11.9",
  "pillow>=11.3.0",
  "openai>=1.109.1",
  "python-dotenv>=1.1.1",
  "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
    "types-requests>=2.32.0",
    "types-pillow>=10.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# Python version configuration
environment.python-version = "3.10"
